--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradovate-api-node",
-  "version": "0.12.18",
+  "version": "0.12.27",
   "description": "A node API wrapper for Binance",
   "main": "dist",
   "files": [
@@ -24,6 +24,7 @@
     "isomorphic-ws": "^4.0.1",
     "json-bigint": "^1.0.0",
     "lodash.zipobject": "^4.1.3",
+    "node-localstorage": "^2.2.1",
     "reconnecting-websocket": "^4.2.0",
     "ws": "^7.2.0"
   },
